--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,19 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ page.title }}</title>
+  <meta name="description" content="{{ site.description }}">
+  <title>{{ page.title }} | {{ site.title }}</title>
+  <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
 </head>
 <body>
-  <header>
-    <h1>{{ page.title }}</h1>
-  </header>
-  
   <main>
-    {{ content }}
+    <div class="container">
+      {{ content }}
+    </div>
   </main>
-  
-  <footer>
-    <p>28.11. 2024</p>
-  </footer>
 </body>
 </html>
